fix: remove horizontal scroll

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url('general-sans.css');
 
+html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
